--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
   <section class="relative overflow-hidden mb-2"> 
     <!-- The video -->
     <video autoplay muted loop class="w-full h-full object-cover absolute z-0">
-      <source src="assets/video/hero.webm" type="video/webm">
+      <source src="./assets/video/hero.webm" type="video/webm">
     </video>
 
     <div class="bg-gradient absolute w-full h-full z-40 opacity-60"></div>
